# INFT2503

./: .gitignore  README.md
eksamen/21_1/: CMakeLists.txt  oppg1.cpp  oppg4.cpp
eksamen/21_1V/: oppg2.cpp  oppg3.cpp  oppg5.cpp
eksamen/21_2/: oppg2.cpp  oppg3.cpp  oppg4.cpp
eksamen/21_2H/: oppg1.cpp  oppg5.cpp
eksamen/22_1/: oppg1.cpp  oppg3.cpp  oppg4.cpp
eksamen/22_1V/: oppg2.cpp
eksamen/22_2H/: CMakeLists.txt  main.cpp  oppg1.cpp  oppg2.cpp  oppg3.cpp  oppg4.cpp  oppg5.cpp
game/: main.cpp
oving1/: CMakeLists.txt  main_a.cpp  main_b.cpp  temperatures
oving2/: CMakeLists.txt  oppg1.cpp  oppg4.cpp  oppg5.cpp  oppg6.cpp  readme.md
oving3/: CMakeLists.txt  commodity.cpp  commodity.hpp  oppg1.cpp  oppg2.cpp  oppg3.cpp  oppg4.cpp
oving4/: CMakeLists.txt  oppg1.cpp  oppg2.cpp
oving5/: CMakeLists.txt  oving5.cpp
oving6/: CMakeLists.txt  ChessBoard.hpp  ChessBoardPrint.hpp  oppg1.cpp  oppg2.cpp
oving7/: CMakeLists.txt  fraction.cpp  fraction.hpp  oppg1.cpp  oppg2.cpp  set.cpp  set.hpp
oving8/: CMakeLists.txt  oppg1.cpp  oppg2.cpp
oving9/: CMakeLists.txt  main.cpp
