cmake_minimum_required(VERSION 3.1)

project(20h)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")

add_executable(20h main.cpp)
add_executable(oppg1 oppg1.cpp)
add_executable(oppg2 oppg2.cpp)
add_executable(oppg3 oppg3.cpp)
add_executable(oppg4 oppg4.cpp)
add_executable(oppg5 oppg5.cpp)
